--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<!-- #region THREE -->
 			<div class="three">
 				<p>I am looking for work in..</p>
-				<p>3d modelling</p>
+				<a href="/3d.html"><p>3d modelling</p></a>
 				<p>web gl<sup>I am trash though</sup></p>
 				<p>web design</p>
 				<p>expperience pages</p>
