--- a/index.html
+++ b/index.html
@@ -80,6 +80,21 @@
 			</div>
 			<!-- endregion -->
 		</div>
+
+
+		<script src="https://www.gstatic.com/firebasejs/5.8.2/firebase.js"></script>
+		<script>
+			// Initialize Firebase
+			var config = {
+				apiKey: "AIzaSyBvC2eHKfXE1yzu9-4UnN_MXxCnmvj8myw",
+				authDomain: "cvof-e6cce.firebaseapp.com",
+				databaseURL: "https://cvof-e6cce.firebaseio.com",
+				projectId: "cvof-e6cce",
+				storageBucket: "cvof-e6cce.appspot.com",
+				messagingSenderId: "869459670569"
+			};
+			firebase.initializeApp(config);
+		</script>
 	</body>
 
 </html>
